# ChangeLog for app-misc/pax-utils
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/pax-utils/ChangeLog,v 1.134 2012/04/26 12:31:36 aballier Exp $

  26 Apr 2012; Alexis Ballier <aballier@gentoo.org> pax-utils-0.3.0.ebuild:
  keyword ~amd64-fbsd

  07 Feb 2012; Mike Frysinger <vapier@gentoo.org> pax-utils-0.2.1.ebuild,
  pax-utils-0.2.2.ebuild, pax-utils-0.2.3.ebuild, pax-utils-0.3.0.ebuild:
  Clean up eclass inherits, and convert to unpacker for xz.

*pax-utils-0.3.0 (24 Jan 2012)

  24 Jan 2012; Mike Frysinger <vapier@gentoo.org> +pax-utils-0.3.0.ebuild:
  Version bump.

  30 Dec 2011; Mark Loeser <halcy0n@gentoo.org> pax-utils-0.2.3.ebuild:
  Stable for ppc64; bug #381625

  06 Nov 2011; Brent Baude <ranger@gentoo.org> pax-utils-0.2.3.ebuild:
  Marking pax-utils-0.2.3 ppc for bug 381625

  30 Oct 2011; Raúl Porcel <armin76@gentoo.org> pax-utils-0.2.3.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #381625

  20 Oct 2011; Jeroen Roovers <jer@gentoo.org> pax-utils-0.2.3.ebuild:
  Stable for HPPA (bug #381625).

  09 Oct 2011; Markus Meier <maekke@gentoo.org> pax-utils-0.2.3.ebuild:
  arm stable, bug #381625

  09 Oct 2011; Markos Chandras <hwoarang@gentoo.org> pax-utils-0.2.3.ebuild:
  Stable on amd64 wrt bug #381625

  08 Oct 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> pax-utils-0.2.3.ebuild:
  x86 stable wrt bug #381625

*pax-utils-0.2.3 (03 Mar 2011)

  03 Mar 2011; Mike Frysinger <vapier@gentoo.org> +pax-utils-0.2.3.ebuild:
  Version bump.

  03 Mar 2011; Mike Frysinger <vapier@gentoo.org> pax-utils-0.2.2.ebuild:
  Stabilize for all.

*pax-utils-0.2.2 (08 Dec 2010)

  08 Dec 2010; Mike Frysinger <vapier@gentoo.org> +pax-utils-0.2.2.ebuild:
  Version bump.

  08 Dec 2010; Mike Frysinger <vapier@gentoo.org> pax-utils-0.2.1.ebuild:
  Mark ppc64 stable #332811.

  29 Aug 2010; Raúl Porcel <armin76@gentoo.org> pax-utils-0.2.1.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #332811
