@@ -1,6 +1,11 @@
 # ChangeLog for app-misc/pax-utils
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/pax-utils/ChangeLog,v 1.134 2012/04/26 12:31:36 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/pax-utils/ChangeLog,v 1.135 2012/04/29 06:34:18 vapier Exp $
+
+*pax-utils-0.4 (29 Apr 2012)
+
+  29 Apr 2012; Mike Frysinger <vapier@gentoo.org> +pax-utils-0.4.ebuild:
+  Version bump.
 
   26 Apr 2012; Alexis Ballier <aballier@gentoo.org> pax-utils-0.3.0.ebuild:
   keyword ~amd64-fbsd
